--- a/src/app/modules/sandbox/effective/team/compare.html
+++ b/src/app/modules/sandbox/effective/team/compare.html
@@ -9,17 +9,15 @@
             <!-- Header-->
             <title-page-bar icon="compare_arrows" title=""></title-page-bar>
 
-                <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive"
-                                 meta="meta"></filter-calendar>
+            <filter-calendar meta="meta"></filter-calendar>
 
             <div class="row">
                 <table>
                     <thead>
                     <tr>
                         <th data-field="indicators"></th>
-                        <th ng-repeat="p in teams track by $index" data-field="{{p._id}}" class="center-align">
-                            {{p.label}}
-                        </th>
+                        <th ng-repeat="p in teams track by $index" data-field="{{p._id}}" class="center-align"
+                            ng-bind="p.label"></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -45,28 +43,24 @@
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
                                 owners="teamsIds" series="series"
-                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
                                 owners="teamsIds" series="series"
-                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
                                 owners="teamsIds" series="series"
-                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
                                 owners="teamsIds" series="series"
-                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                     </div>
                 </div>
