--- a/src/app/components/directives/sandbox/playerStats/playerStats.html
+++ b/src/app/components/directives/sandbox/playerStats/playerStats.html
@@ -94,22 +94,22 @@
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
-                            owners="playersIds" series="series" periodicity-active="periodicityActive"
+                            owners="playersIds" series="series"
                             indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
-                            owners="playersIds" series="series" periodicity-active="periodicityActive"
+                            owners="playersIds" series="series"
                             indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
-                            owners="playersIds" series="series" meta="meta" periodicity-active="periodicityActive"
+                            owners="playersIds" series="series" meta="meta"
                             indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
-                            owners="playersIds" series="series" periodicity-active="periodicityActive"
+                            owners="playersIds" series="series"
                             indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
     </div>
 </div>
