QHBWEB-98 : Joueur - Fiche joueur

--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -124,7 +124,7 @@
                             </div>
 
                             <div class="card-action">
-                                <a href="#/private/playerStats/{{player._id}}"
+                                <a href="#/private/viewPlayer/{{player._id}}"
                                    class="waves-effect accent-text-color">
                                     <i class="fa fa-bar-chart"></i>
                                 </a>
