--- a/src/app/components/directives/commons/titlePageBar/titlePageBar.html
+++ b/src/app/components/directives/commons/titlePageBar/titlePageBar.html
@@ -1,7 +1,7 @@
 <!-- Entete -->
 <div class="row dark-primary-color center valign-wrapper hide-on-med-and-down">
     <div class="col l1 m2">
-        <i class="material-icons md-48 light-text-color ">{{icon}}</i>
+        <i class="material-icons md-48 light-text-color" ng-bind="icon"></i>
     </div>
     <div class="col l9 m6 left-align">
         <h5 translate="{{title}}"></h5>
@@ -15,7 +15,7 @@
 
 <div class="row dark-primary-color center hide-on-large-only">
     <div class="col s12">
-        <i class="material-icons md-48 light-text-color ">{{icon}}</i>
+        <i class="material-icons md-48 light-text-color" ng-bind="icon"></i>
     </div>
     <div class="col s12">
         <h6 translate="{{title}}"></h6>
