--- a/src/app/components/directives/sandbox/playerStats/playerStats.html
+++ b/src/app/components/directives/sandbox/playerStats/playerStats.html
@@ -1,15 +1,15 @@
-<filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+<filter-calendar meta="meta"></filter-calendar>
 
 <!-- Stats goals/sanction/use start -->
 <div class="row">
 
-    <div class="col s12 m12 l4" ng-show="player.status.positionType!=='goalkeeper'">
+    <div class="col s12 m12 l4" ng-if="player.status.positionType!=='goalkeeper'">
         <stats-goals bind-to-id="goalScored"
                      label="goalScored"
                      sandbox-id="meta.sandbox._id">
         </stats-goals>
     </div>
-    <div class="col s12 m12 l4" ng-show="player.status.positionType==='goalkeeper'">
+    <div class="col s12 m12 l4" ng-if="player.status.positionType==='goalkeeper'">
         <stats-goals bind-to-id="goalConceded"
                      label="goalConceded"
                      sandbox-id="meta.sandbox._id">
