--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -57,25 +57,25 @@
                 <div class="col s12 m6">
                     <qaobee-radar-chart
                             title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
-                            owners="tabOwner" series="series" periodicity-active="periodicityActive"
+                            owners="tabOwner" series="series"
                             indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                 </div>
                 <div class="col s12 m6">
                     <qaobee-radar-chart
                             title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
-                            owners="tabOwner" series="series" meta="meta" periodicity-active="periodicityActive"
+                            owners="tabOwner" series="series" meta="meta"
                             indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                 </div>
                 <div class="col s12 m6">
                     <qaobee-radar-chart
                             title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
-                            owners="tabOwner" series="series" periodicity-active="periodicityActive"
+                            owners="tabOwner" series="series"
                             indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                 </div>
                 <div class="col s12 m6">
                     <qaobee-radar-chart
                             title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
-                            owners="tabOwner" series="series" meta="meta" periodicity-active="periodicityActive"
+                            owners="tabOwner" series="series" meta="meta"
                             indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                 </div>
             </v-page>
