--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -5,7 +5,7 @@
     <!-- entete start tablet and sup-->
     <title-page-bar icon="event" title="mainAgenda.title"></title-page-bar>
     
-    <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+    <filter-calendar meta="meta"></filter-calendar>
     <!-- entete end -->
 
     <div class="row center">
