--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -19,7 +19,7 @@
             <input type="checkbox" ng-model="showDetail" />
             <span class="card-title activator accent-text-color" ng-click="showDetail = !showDetail">
                 <i class="fa fa-fw fa-chevron-down"></i>
-                <span class="primary-text-color">{{'playerLabels.playerCivilSection' | translate}}</span></span>
+                <span class="primary-text-color" translate="playerLabels.playerCivilSection"></span></span>
 
             <div class="card-content right-align card-toggle" >
                 <player-infos player="player"></player-infos>
