--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -2,28 +2,28 @@
 <!-- body start-->
     <div class="row"><div class="col s12">&nbsp;</div></div>
     
-    <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+    <filter-calendar meta="meta"></filter-calendar>
        
     
     <div class="row">
         <div class="col s12 l4">
-            <widget-notifications meta="meta" user="user"/>
+            <widget-notifications meta="meta" user="user" ></widget-notifications>
         </div>
         
         <div class="col s12 l4">
-            <widget-calendar meta="meta" user="user"/>
+            <widget-calendar meta="meta" user="user" ></widget-calendar>
         </div>
         
         <div class="col s12 l4">
-            <widget-calendar meta="meta" user="user"/>
+            <widget-calendar meta="meta" user="user" ></widget-calendar>
         </div>
         
         <div class="col s12">
-            <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="3" stataggregat="COUNT"/>
+            <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="10" stataggregat="COUNT" ></widget-podium>
         </div>
     
         <div class="col s12">
-            <widget-podium meta="meta" user="user" indicator="playTime" nbitem="3" stataggregat="SUM"/>
+            <widget-podium meta="meta" user="user" indicator="playTime" nbitem="10" stataggregat="SUM" ></widget-podium>
         </div>
         
     </div>
