fixes QHBWEB-101 : Stats - Graphes plantés

--- a/src/app/components/directives/sandbox/playerStats/playerStats.html
+++ b/src/app/components/directives/sandbox/playerStats/playerStats.html
@@ -38,7 +38,7 @@
             <small translate="stats.efficiency.efficiency"></small>
         </h5>
     </div>
-    
+
     <div class="col s12 m6 l3" style="margin-top:15px;">
         <widget-efficiency-player meta="meta" user="user"></widget-efficiency-player>
     </div>
@@ -94,22 +94,22 @@
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
-                            owners="playersIds" series="series"
+                            meta="meta"
                             indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
-                            owners="playersIds" series="series"
+                            meta="meta"
                             indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
-                            owners="playersIds" series="series" meta="meta"
+                            meta="meta"
                             indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
     </div>
     <div class="col s12 m6">
         <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
-                            owners="playersIds" series="series"
+                            meta="meta"
                             indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
     </div>
 </div>
