--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -6,7 +6,7 @@
     <!-- Entete-->
     <title-page-bar icon="group" title="{{team.label}}"></title-page-bar>
             
-    <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+    <filter-calendar meta="meta"></filter-calendar>
     
             
             
