--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -22,13 +22,12 @@
         <div class="q-radar-chart">
             <canvas id="radar" class="chart chart-radar" ng-if="noStat"
                     chart-options="radarOpts"
-                    chart-legend="{{series}}" chart-series="series" chart-data="data" chart-labels="labels"
+                    chart-legend="series" chart-series="series" chart-data="data" chart-labels="labels"
                     ng-if="!loading">
             </canvas>
         </div>
         <div class="right-align" ng-if="noStat">
-            <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners"
-                                      periodicity-active="periodicityActive" periodicity="periodicity"
+            <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners" distinct="distinct"
             ></qaobee-stat-detail-modal>
         </div>
     </div>
